# vuln-hawk

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements.txt
eval/: compaction_experiment.py  ground_truth.json  run_eval.py
eval/results/: claude-pygoat-methodology-20260516.md  claude-pygoat-report-20260516.json  gemini-methodology-20260518.md  gemini-report-20260518.json
sandbox/: Dockerfile  Dockerfile.sender
scripts/: example_trajectory.json  query_trajectory.py  sync_upstream.sh
targets/: README.md
targets/vulnerable_flask_app/: Dockerfile  app.py  auth.py  db.py  upload.py  utils.py
vuln_agent/: __init__.py  agent.py  config.py  pipeline.py  prompts.py  report.py  security.py  target_manager.py  tools.py
vuln_agent/agents/: __init__.py  analyzer.py  planner.py  reporter.py  scanner.py
